--- a/kidz tution tracker/Base.lproj/LaunchScreen.storyboard
+++ b/kidz tution tracker/Base.lproj/LaunchScreen.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,15 +17,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashImage" translatesAutoresizingMaskIntoConstraints="NO" id="uBu-3W-SIf">
-                                <rect key="frame" x="30" y="30" width="540" height="560"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="uBu-3W-SIf" secondAttribute="bottom" constant="10" id="S9q-mx-piq"/>
-                            <constraint firstItem="uBu-3W-SIf" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="10" id="dRK-8Y-cMZ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="uBu-3W-SIf" secondAttribute="trailing" constant="10" id="riH-FA-gJ9"/>
-                            <constraint firstItem="uBu-3W-SIf" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="10" id="v2d-sR-CQF"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="uBu-3W-SIf" secondAttribute="bottom" id="dTx-SC-xAO"/>
+                            <constraint firstItem="uBu-3W-SIf" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="dyx-Tn-oXy"/>
+                            <constraint firstAttribute="trailing" secondItem="uBu-3W-SIf" secondAttribute="trailing" id="jVJ-Uu-OQb"/>
+                            <constraint firstItem="uBu-3W-SIf" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="oFD-1R-uua"/>
                         </constraints>
                     </view>
                 </viewController>
